--- a/index.html
+++ b/index.html
@@ -1,33 +1,60 @@
-import java.util.Scanner;
-
-public class OnlineEducation {
-
-    public static void main(String[] args) {
-        Scanner input = new Scanner(System.in);
-        String[] courses = {"Math", "Physics", "Chemistry", "Biology", "Computer Science"};
-        String studentName;
-
-        System.out.println("===== Welcome to Online Education Platform =====");
-        System.out.print("Enter your name: ");
-        studentName = input.nextLine();
-
-        System.out.println("\nHello, " + studentName + "! Available courses:");
-
-        for (int i = 0; i < courses.length; i++) {
-            System.out.println((i + 1) + ". " + courses[i]);
-        }
-
-        System.out.print("\nSelect a course by entering the number: ");
-        int choice = input.nextInt();
-
-        if (choice >= 1 && choice <= courses.length) {
-            System.out.println("\nYou have successfully registered for " + courses[choice - 1] + " course.");
-            System.out.println("Best of luck, " + studentName + "!");
-        } else {
-            System.out.println("\nInvalid choice. Please restart and select a valid course.");
-        }
-
-        System.out.println("\n===== Thank you for using Online Education Platform =====");
-        input.close();
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Online Education for All Classes</title>
+  <style>
+    body { font-family: Arial; background-color: #f0f8ff; text-align: center; }
+    h1 { color: darkblue; }
+    .menu a {
+      padding: 10px 20px;
+      text-decoration: none;
+      background-color: #333;
+      color: white;
+      margin: 5px;
+      border-radius: 5px;
     }
-}
+    .menu a:hover { background-color: darkblue; }
+  </style>
+</head>
+<body>
+
+<h1>Welcome to Online Education</h1>
+<h3>Learning for All Classes - Math, Science, English & More</h3>
+
+<div class="menu">
+  <a href="#math">Math</a>
+  <a href="#science">Science</a>
+  <a href="#english">English</a>
+  <a href="#gk">General Knowledge</a>
+  <a href="#contact">Contact</a>
+</div>
+
+<hr>
+
+<!-- Math Section -->
+<h2 id="math">📐 Math Learning</h2>
+<p>Learn math from Class 1 to 12. Topics: Addition, Algebra, Geometry, Trigonometry, Calculus.</p>
+
+<!-- Science Section -->
+<h2 id="science">🔬 Science Learning</h2>
+<p>Physics, Chemistry, Biology with notes, diagrams, and experiments.</p>
+
+<!-- English Section -->
+<h2 id="english">📖 English Learning</h2>
+<p>Grammar, Tenses, Essay Writing, Vocabulary, Reading Skills.</p>
+
+<!-- General Knowledge Section -->
+<h2 id="gk">🌍 General Knowledge</h2>
+<p>World facts, quizzes, current affairs, important dates.</p>
+
+<!-- Contact Section -->
+<h2 id="contact">📞 Contact Us</h2>
+<p>Email: onlineeducation@gmail.com</p>
+<p>Phone: +92 123 4567890</p>
+<p>Address: Learning Academy, Pakistan</p>
+
+<hr>
+<p>&copy; 2025 Online Education. All rights reserved.</p>
+
+</body>
+</html>
